scripts/test_ideaoutputs/badsample44idea.txt
/Users/lanyang/Documents/PLT/scripts/cfiles/badsample44.cpp:8:59: error: use of undeclared identifier 'rows'
if (!(( ( ( (  3  -  1  ) >=  0  ) && ( (  3  -  1  ) < ( rows( dx ) ) ) ) && ( ( (  1  -  1  ) >=  0  ) && ( (  1  -  1  ) < ( cols( dx ) ) ) ) ))) throw invalid_argument("Matsub index check");
                                                          ^
/Users/lanyang/Documents/PLT/scripts/cfiles/badsample44.cpp:8:129: error: use of undeclared identifier 'cols'
if (!(( ( ( (  3  -  1  ) >=  0  ) && ( (  3  -  1  ) < ( rows( dx ) ) ) ) && ( ( (  1  -  1  ) >=  0  ) && ( (  1  -  1  ) < ( cols( dx ) ) ) ) ))) throw invalid_argument("Matsub index check");
                                                                                                                                ^
/Users/lanyang/Documents/PLT/scripts/cfiles/badsample44.cpp:9:38: error: use of undeclared identifier 'cols'
(  d  = (  (dx[( ( (  3  -  1  ) * ( cols( dx ) ) ) + (  1  -  1  ) )])  +  1  ) ) ;
                                     ^
3 errors generated.
